k8s/senpy-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
  selector:
    name: ${NAME}
